fix: accordion title & list icons cut off

--- a/src/styles/components/Accordion.css
+++ b/src/styles/components/Accordion.css
@@ -18,6 +18,10 @@
       aspect-ratio: 1;
     }
 
+    & > h3 {
+      margin-block: 0;
+    }
+
     /* accordion opening/closing icon */
     &::before,
     &::after {
@@ -37,13 +41,24 @@
     &::after {
       width: var(--acc-icon-stroke);
       height: var(--acc-icon-width);
-      transform: translateX(calc(var(--acc-icon-width) / 2 - var(--acc-icon-stroke) / 2));
+      transform: translateX(
+        calc(var(--acc-icon-width) / 2 - var(--acc-icon-stroke) / 2)
+      );
       transition: height 200ms cubic-bezier(0.59, 0.01, 0.36, 0.98);
     }
   }
 
+  .accordion-content {
+    padding-top: var(--body-margin-bottom);
+
+    .list {
+      width: 100%;
+    }
+  }
+
   &[open] {
-    padding: clamp(25px, 2dvw, 30px) clamp(10px, 3dvw, 30px) clamp(20px, 1.5dvw, 25px);
+    padding: clamp(25px, 2dvw, 30px) clamp(10px, 3dvw, 30px)
+      clamp(20px, 1.5dvw, 25px);
   }
 
   /* accordion opening/closing icon shrinking */
